Changed styling of URLs.

--- a/styles/website.css
+++ b/styles/website.css
@@ -8,3 +8,8 @@ blockquote[id^=fn] sup {
     top: 0;
     font-size: larger;
 }
+
+/* indent free-standing URLs */
+p > a:first-child {
+    margin-left: 1em;
+}
