Completed first pass at updating beta API documentation.
Changed styling of inline code snippets.

--- a/styles/website.css
+++ b/styles/website.css
@@ -9,3 +9,11 @@ blockquote[id^=fn] sup {
     font-size: larger;
 }
 
+code {
+    padding: 0 !important;
+    background-color: inherit !important;
+}
+
+code:after, code:before {
+    content: "" !important;
+}
